--- a/public_html/index.html
+++ b/public_html/index.html
@@ -10,11 +10,13 @@ and open the template in the editor.
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="battleshipLayout.css" />
-        <script type="text/javascript" src="battleship.js"></script>
+        <script type="text/javascript" src="battleship.js">
+        </script>
     </head>
-    <body>
-        <div id="battleship">
+    <body onload="generate_table();">
+<!--        <div id="battleship">
             <input type="button" value="Generate a table." onclick="generate_table()">
-        </div>
+        </div>-->
+
     </body>
 </html>
