Draws two tables and can click to change the color
Only works in the right one at the moment

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -8,12 +8,12 @@ and open the template in the editor.
     <head>
         <title>Battleship!</title>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!--<meta name="viewport" content="width=device-width, initial-scale=1.0">-->
         <link rel="stylesheet" type="text/css" href="battleshipLayout.css" />
         <script type="text/javascript" src="battleship.js">
         </script>
     </head>
-    <body onload="generate_table();">
+    <body onload="start();">
 <!--        <div id="battleship">
             <input type="button" value="Generate a table." onclick="generate_table()">
         </div>-->
