Added ability to find computers ships
Tiles only turn red at the moment for
testing only.

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -11,6 +11,7 @@ and open the template in the editor.
         <!--<meta name="viewport" content="width=device-width, initial-scale=1.0">-->
         <link rel="stylesheet" type="text/css" href="battleshipLayout.css" />
         <script type="text/javascript" src="battleship.js">
+                    <a href="index.html"></a>
         </script>
     </head>
     <body onload="start();">
