--- a/public_html/index.html
+++ b/public_html/index.html
@@ -10,14 +10,11 @@ and open the template in the editor.
         <meta charset="UTF-8">
         <!--<meta name="viewport" content="width=device-width, initial-scale=1.0">-->
         <link rel="stylesheet" type="text/css" href="battleshipLayout.css" />
-        <script type="text/javascript" src="battleship.js">
-                    <a href="index.html"></a>
-        </script>
+        <script type="text/javascript" src="battleship.js"></script>
     </head>
     <body onload="start();">
 <!--        <div id="battleship">
             <input type="button" value="Generate a table." onclick="generate_table()">
         </div>-->
-
     </body>
 </html>
